[tool.poetry]
name = "openmetrics-liveness-probe"
version = "0.2.0"
description = "Library for getting the time when the service was last considered alive."
authors = ["Daniil Nikitin <dnikitin@usetech.ru>"]
keywords = ["openmetrics", "liveness_probe"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Usetech/openmetrics-liveness-probe"
repository = "https://github.com/Usetech/openmetrics-liveness-probe"
packages = [
    { include = "openmetrics_liveness_probe" }
]

[tool.poetry.dependencies]
python = ">=3.8, <4"
prometheus-client = ">=0.9"
pydantic = "^1.8 || ^2.0"

[tool.poetry.dev-dependencies]
pytest = "^8.3.5"
tomlkit = "^0.13.2"
tox = "^4.24"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^1.14.1"
pytest-cov = "^5.0.0"
requests = "2.32.3"
types-requests = "2.32.0.20241016"
requests-mock = "^1.12.1"
tox-gh-actions = "^3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
