[project]
name = "openmetrics-liveness-probe"
version = "0.2.6"
description = "Library for getting the time when the service was last considered alive."
authors = [
    {name = "Daniil Nikitin",email = "dnikitin@usetech.ru"}
]
keywords = ["openmetrics", "liveness_probe"]
license = "MIT"
readme = "README.md"
requires-python = ">=3.8, <4"
dependencies = [
    "prometheus-client (>=0.9)",
    "pydantic (>=1.8.0,<3.0.0)"
]

[project.urls]
Homepage = "https://github.com/Usetech/openmetrics-liveness-probe"
Repository = "https://github.com/Usetech/openmetrics-liveness-probe"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
tomlkit = "^0.13.2"
tox = "^4.24"
flake8 = "^5.0.4"
isort = "^5.10.1"
mypy = "^1.14.1"
pytest-cov = "^5.0.0"
requests = "2.32.3"
types-requests = "2.32.0.20241016"
requests-mock = "^1.12.1"
tox-gh-actions = "^3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
